# tblinstance.github.io

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  build.sh  deploy_gh_pages.sh  deploy_main.sh  firestore.rules  index.html  next.config.ts  openapi.json  package-lock.json  package.json  pyproject.toml  render.yaml  robots.txt  sitemap.xml  tailwind.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: deploy-frontend.yml  deploy.yml
assets/: index-1T_F_4jZ.js  index-BG2Iur-V.js  index-BN3Ll9Vk.css  index-BRUR69vS.js  index-Blt1Iya0.js  index-Bpq04Aqp.css  index-CAE5Ysgq.css  index-CG-Nc_mh.js  index-CNSZS9jU.js  index-CW5maFBN.js  index-Cco32m3M.js  index-CeMG43v8.js  index-CrvtKMvP.css  index-D411V14-.js  index-DCTfutTE.css  index-NEyS-YbM.js  index-TBV5LjeD.js  index-VfAOBeVb.js  index-uA8KZfMC.js
backend/: build.sh  create_admin.py  fund_admin.py
backend/core/: settings.py  urls.py
backend/tblinc/: models.py  signals.py  views.py
backend/tblinc/migrations/: 0001_initial.py  0004_manualpaymentrequest.py  0008_systemsetting.py  0011_server_expires_at_server_plan_price.py  0015_server_auto_renew_server_renewal_warning_sent.py  0017_user_is_approved.py  0019_alter_user_is_approved.py
docs/: blueprint.md
frontend/: .env  index.html
frontend/src/: App.tsx  index.css
src/: next.config.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Navbar.tsx  PricingCard.tsx  Product-Page.tsx
src/context/: auth-context.tsx  cart-context.tsx
src/hooks/: use-auth.ts
src/lib/: placeholder-images.json  products.ts  types.ts
(+119 files in other folders)
